# uAgent-Currency-Monitor

./: .gitignore  client_template.py  pyproject.toml  readme.md  requirements.txt
src/: .env  main.py
src/agents/: __init__.py
src/agents/currency/: currency_agent.py
src/agents/market/: market.py
src/agents/temperature/: temperature_agent.py
src/agents/user/: user.py
src/messages/: __init__.py  general.py  market.py  request.py  user.py  warn.py
src/utils/: cooldown.py  database.py  requests.py
